[project]
name = "fastcam-cv"
version = "0.1.0"
description = ""
requires-python = ">=3.11"

dependencies = [
    "lightglue",
    "numpy",
    "opencv-python",
    "torch",
    "torchvision",
]

[tool.uv.workspace]
members = [
    "LightGlue",
]

[tool.uv.sources]
lightglue = { workspace = true, editable = true }

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []  # 패키지 자동 검색 안 함
py-modules = ["project_root_finder"]  # 이 파일만 모듈로 등록

# data, output 등은 무시
[tool.setuptools.package-data]
"*" = []
